fixed missing hero text on tablet/mobile screens

--- a/src/static/css/styles.scss
+++ b/src/static/css/styles.scss
@@ -117,12 +117,12 @@ header{
         }
         .carousel-text{
             // max-height: 25em;
-            display: flex;
+            
             max-width: 25vw;
             min-width: 12em;
             height: 100%;
             color: $custom-color;
-            padding: 1.5em 1.5em;
+            //padding: 1.5em 1.5em;
             // border-radius: .25em 0 0 .25em;
         }
         .carousel-control-next,
@@ -364,9 +364,11 @@ header{
                 }
             }
             .carousel-text{
-                // display: block;
+                display: block;
                 position: absolute;
                 left: 0;
+                top: 0;
+                right: 0;
                 max-width: 100%;
                 height: 60svh;
                 height: 60vh;
@@ -417,7 +419,7 @@ header{
                 }
             }
             .carousel-text{
-                // display: block;
+                display: block;
                 position: absolute;
                 left: 0;
                 max-width: 100%;
